# movement-migration

./: .gitignore  Cargo.toml  README.md  clap-markdown-list  compare_left.json  compare_right.json  flake.nix
.githooks/: pre-commit
.github/workflows/: build-push-container.yml  build-push-containers-all.yml  container-check.yml  nix-command.yml  tests.yml
checks/: README.md
checks/e2e/checks/sketchpad/: Cargo.toml
checks/e2e/checks/sketchpad/src/: example.rs
checks/e2e/citeria/account-equals/: Cargo.toml
checks/e2e/citeria/account-equals/src/: lib.rs
checks/e2e/citeria/governance/: Cargo.toml
checks/e2e/util/types/: Cargo.toml
checks/e2e/util/types/src/: check.rs
checks/executor/checks/movement-mainnet/: Cargo.toml
checks/executor/checks/sketchpad/: Cargo.toml
checks/migrator/checks/balances-equal/: Cargo.toml
checks/migrator/checks/balances-equal/src/: balances_equal.rs  lib.rs
checks/migrator/checks/governance/: Cargo.toml
checks/migrator/checks/matching-feature-flags/: Cargo.toml
checks/migrator/checks/matching-feature-flags/src/: lib.rs  matching_feature_flags.rs
checks/migrator/checks/pre-l1-merge/: Cargo.toml  README.md
checks/migrator/checks/pre-l1-merge/src/: lib.rs  pre_l1_merge.rs
checks/migrator/checks/sketchpad/: Cargo.toml  config.yaml
checks/migrator/checks/sketchpad/src/: accounts_equal.rs  example.rs  lib.rs  matching_feature_flags.rs  transacting.rs
checks/migrator/checks/transacting/: Cargo.toml
checks/migrator/citeria/accounts-equal/: Cargo.toml
checks/migrator/citeria/accounts-equal/src/: lib.rs
checks/migrator/citeria/balances-equal/: Cargo.toml  README.md
checks/migrator/citeria/empty/: Cargo.toml
checks/migrator/citeria/governance/: Cargo.toml
checks/migrator/citeria/matching-feature-flags/: Cargo.toml
checks/migrator/citeria/transacting/: Cargo.toml
checks/migrator/util/types/: Cargo.toml
checks/node/checks/movement-mainnet/: Cargo.toml
checks/node/checks/sketchpad/: Cargo.toml
checks/node/citeria/empty/: Cargo.toml
checks/node/citeria/global-storage-includes/: Cargo.toml
checks/node/citeria/global-storage-injective/: Cargo.toml
checks/node/citeria/global-storage-not-empty/: Cargo.toml
checks/node/preludes/: Cargo.toml
checks/node/preludes/src/: basic.rs
checks/node/util/types/: Cargo.toml
docs/cli/: README.md
environments/core/box/: Cargo.toml  README.md
environments/core/box/src/: environment.rs
environments/core/box/src/environment/: config.rs  environment.rs
environments/core/box/src/migrate/: migrate.rs
environments/core/provisioner/: Cargo.toml  README.md
environments/core/testing/: Cargo.toml  README.md
environments/core/testing/src/environment/: config.rs  environment.rs
environments/util/environment-types/: Cargo.toml
environments/util/types/: Cargo.toml  README.md
environments/util/types/src/: environment.rs
k8s/charts/mtma/: Chart.yaml  values.yaml
k8s/charts/mtma/templates/: job.yaml
migration/: README.md
migration/cli/check/: Cargo.toml
migration/cli/check-dev/: Cargo.toml
migration/cli/migrate/: Cargo.toml
migration/cli/migrate-chain/: Cargo.toml
migration/cli/migrate-chain-dev/: Cargo.toml
migration/cli/migrate-dev/: Cargo.toml
migration/cli/migrate-node/: Cargo.toml
migration/cli/migrate-node-dev/: Cargo.toml
migration/cli/migrate-node-dev/src/cli/: migrate_checked.rs
migration/cli/mtma/: Cargo.toml
migration/cli/mtma-dev/: Cargo.toml
migration/cli/track/: Cargo.toml
migration/cli/track-dev/: Cargo.toml
migration/core/: README.md
migration/core/migrator/: README.md
migration/core/mtma/: Cargo.toml  README.md
migration/core/mtma-migrate-chain/: Cargo.toml
migration/core/mtma-replay/: Cargo.toml
migration/core/mtma/src/migrate/: config.rs
migration/core/node/: README.md
migration/util/e2e-types/: Cargo.toml
migration/util/e2e-types/src/: migration.rs
migration/util/e2e-types/src/migrator/: movement_aptos_migrator.rs  movement_migrator.rs
migration/util/executor-types/: Cargo.toml
migration/util/migrator-types/: Cargo.toml  README.md
migration/util/migrator-types/src/: migration.rs  migrator.rs
migration/util/migrator-types/src/migrator/: movement_aptos_migrator.rs  movement_migrator.rs
migration/util/migrator-types/src/migrator/movement_migrator/: live.rs
migration/util/node-types/: Cargo.toml  README.md
migration/util/node-types/src/: executor.rs  migration.rs
migration/util/node-types/src/executor/: movement_aptos_executor.rs  movement_executor.rs
migration/util/node-types/src/executor/movement_executor/: account_address.rs  block.rs  global_state_key.rs  transaction.rs
scripts/docker/: build-push-container.sh  build-push-manifest.sh
util/: README.md
util/movement-aptos/core/: Cargo.toml  build.rs
util/movement-aptos/core-util/: Cargo.toml
util/movement-aptos/core/src/: config.rs  movement_aptos.rs
util/movement-aptos/core/src/movement_aptos/: faucet_api.rs  runtime.rs
util/movement-aptos/core/src/movement_aptos/runtime/: native.rs
util/movement-aptos/movement-aptos/: Cargo.toml
util/movement-aptos/movement-aptos-core/: Cargo.toml  build.rs
util/movement-aptos/movement-aptos-core-inner/: Cargo.toml  build.rs
util/movement-aptos/movement-aptos-core/src/: config.rs  lib.rs  movement_aptos.rs
util/movement-aptos/movement-aptos-core/src/movement_aptos/: rest_api.rs  runtime.rs
util/movement-aptos/movement-aptos-core/src/movement_aptos/runtime/: delegated.rs  tokio_test.rs
util/movement-aptos/movement-aptos-util/: Cargo.toml
util/movement-aptos/movement-aptos-util/src/: lib.rs
util/movement/core/: Cargo.toml  build.rs
util/movement/core-util/: Cargo.toml
util/movement/core-util/src/: lib.rs
util/movement/movement/: Cargo.toml
util/movement/movement-core/: Cargo.toml
util/movement/movement-core-util/: Cargo.toml
util/movement/movement-util/: Cargo.toml
util/movement/movement-util/src/: lib.rs
util/movement/syncing/: Cargo.toml
util/types/: Cargo.toml
util/types/src/: lib.rs
util/util/: Cargo.toml  README.md
util/util/src/: file.rs
(+75 files in other folders)
