[package]
name = "mtma-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
movement-core-util = { workspace = true }
movement-aptos-core-util = { workspace = true }

[lints]
workspace = true
