[package]
name = "mtma-node-preludes"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-types = { workspace = true }
chrono = { workspace = true }
mtma-node-test-types = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
