[package]
name = "mtma-testing-environment"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
anyhow = { workspace = true }
clap-markdown-ext = { workspace = true }
thiserror = { workspace = true }
orfile = { workspace = true }
mtma-node-types = { workspace = true }
mtma-migrator-types = { workspace = true }
mtma-node-null-core = { workspace = true }
aptos-db = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-config = { workspace = true }
aptos-executor = { workspace = true }
aptos-vm = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
aptos-framework-pre-l1-merge-release = { workspace = true }
movement-signer = { workspace = true }
movement-signer-loader = { workspace = true }
hex = { workspace = true }
mtma-types = { workspace = true }
movement-core = { workspace = true }

[lints]
workspace = true
