[package]
name = "mtma-testing-environment"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
mtma-migrator-types = { workspace = true }
mtma-environment-types = { workspace = true }
movement-core = { workspace = true }
kestrel = { workspace = true }

[lints]
workspace = true
