[package]
name = "mtma-environment-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
mtma-migrator-types = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
