[package]
name = "mtma-dev"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
tokio = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
anyhow = { workspace = true }
clap-markdown-ext = { workspace = true }
jemallocator = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

mtma-check = { workspace = true }
mtma-migrate = { workspace = true }
mtma-track = { workspace = true }

mtma-check-dev = { workspace = true }
mtma-migrate-dev = { workspace = true }
mtma-track-dev = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tracing"]

[lints]
workspace = true
