[package]
name = "migration-e2e-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
migration-executor-types = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
maptos-opt-executor = { workspace = true }
aptos-executor = { workspace = true }
aptos-vm = { workspace = true }
aptos-types = { workspace = true }
thiserror = { workspace = true }
aptos-storage-interface = { workspace = true }
either = { workspace = true }
tracing = { workspace = true }
movement-core = { workspace = true }
movement-aptos-core = { workspace = true }
kestrel = { workspace = true }
movement-client = { workspace = true }
aptos-rest-client = { workspace = true }
aptos-config = { workspace = true }

[lints]
workspace = true
