[package]
name = "mtma-migrator-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
mtma-node-types = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
movement-core = { workspace = true }
movement-aptos-core = { workspace = true }
kestrel = { workspace = true }
mtma-types = { workspace = true }

[lints]
workspace = true
