[package]
name = "mtma-node-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
maptos-opt-executor = { workspace = true }
thiserror = { workspace = true }
either = { workspace = true }
tracing = { workspace = true }
movement-aptos-core = { workspace = true }
futures-channel = { workspace = true }
movement-util = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
mtma-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-test = { workspace = true }

[lints]
workspace = true
