[package]
name = "movement-aptos-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
movement-aptos-core-inner = { workspace = true }
movement-aptos = { workspace = true }

[build-dependencies]
cargo_metadata = { workspace = true }

[lints]
workspace = true
