[package]
name = "movement-aptos-core-util"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-sdk = { workspace = true }
aptos-types = { workspace = true }
aptos-crypto = { workspace = true }
aptos-config = { workspace = true }
aptos-node = { workspace = true }

[lints]
workspace = true
