[package]
name = "movement-core-util"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
movement-util = { workspace = true }
movement-client = { workspace = true }
maptos-opt-executor = { workspace = true }
vendor-util = { workspace = true }

[lints]
workspace = true
