[package]
name = "movement-core-util"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
mtma-node-test-types = { workspace = true }
bcs = { workspace = true }
bcs-ext = { workspace = true }


[lints]
workspace = true
