[package]
name = "migration-e2e-test-account-equals-criterion"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
migration-executor-test-types = { workspace = true }
bcs = { workspace = true }
bcs-ext = { workspace = true }


[lints]
workspace = true
