[package]
name = "mtma-migrator-test-governance-criterion"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
mtma-node-test-types = { workspace = true }


[lints]
workspace = true
