[package]
name = "mtma-migrator-balances-equal"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
mtma-migrator-types = { workspace = true }
mtma-migrator-test-types = { workspace = true }
anyhow = { workspace = true }
mtma-migrator-test-balances-equal-criterion = { workspace = true }
mtma-node-null-core = { workspace = true }
tokio = { workspace = true }
kestrel = { workspace = true }
mtma-node-test-types = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
