[package]
name = "mtma-migrator-matching-feature-flags"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
mtma-migrator-types = { workspace = true }
mtma-migrator-test-types = { workspace = true }
anyhow = { workspace = true }
mtma-migrator-test-matching-feature-flags-criterion = { workspace = true }
mtma-node-null-core = { workspace = true }
tokio = { workspace = true }
kestrel = { workspace = true }
mtma-node-test-types = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
