[package]
name = "migrator-sketchpad"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
mtma-types = { workspace = true }
mtma-migrator-types = { workspace = true }
mtma-migrator-test-types = { workspace = true }
anyhow = { workspace = true }
mtma-migrator-test-matching-feature-flags-criterion = { workspace = true }
mtma-migrator-test-transacting-criterion = { workspace = true }
mtma-migrator-test-empty-criterion = { workspace = true }
mtma-node-replay-core = { workspace = true }
mtma-node-test-global-storage-injective-criterion = { workspace = true }
mtma-node-test-global-storage-includes-criterion = { workspace = true }
mtma-node-test-global-storage-not-empty-criterion = { workspace = true }
mtma-migrator-test-accounts-equal-criterion = { workspace = true }
mtma-node-preludes = { workspace = true }
mtma-node-null-core = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
kestrel = { workspace = true }
mtma-node-test-types = { workspace = true }
aptos-sdk = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
